<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ApplicationActivity"
    android:layout_margin="0dp"
    android:background="@drawable/bgapp">


    <TextView

        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:textColor="#D4AC0D"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="32sp"
        android:text="@string/helb_application"
        >


    </TextView>

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"
        android:inputType="textCapWords"
        android:hint="@string/name"
        android:textSize="24sp"
        android:textColorHint="@color/hintcolor"/>
    <EditText
        android:id="@+id/institute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:inputType="textCapWords"
        android:hint="@string/institute"
        android:textColorHint="@color/hintcolor"/>
    <EditText
        android:id="@+id/regno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:textSize="24sp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"
        android:inputType="text"
        android:hint="@string/registration_number"
        android:textColorHint="@color/hintcolor"/>
    <EditText
        android:id="@+id/loan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:textSize="24sp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"
        android:inputType="numberDecimal"
        android:hint="@string/loan_amount"
        android:textColorHint="@color/hintcolor"/>

<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:orientation="horizontal"
    android:layout_marginTop="40dp">
    <Button
        android:id="@+id/cancelbtn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="24dp"
        android:backgroundTint="@color/my_background_color"
        android:text="@string/cancel">

    </Button>
    <Button
        android:backgroundTint="@color/my_background_color"
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:layout_marginStart="30dp"
        android:text="@string/next">

    </Button>
</LinearLayout>

</LinearLayout>