<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/bgapp">


<TextView
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_marginTop="50dp"
    android:textColor="#D4AC0D"
    android:textStyle="bold"
    android:gravity="center"
    android:textSize="35sp"
    android:text="@string/helb_portal"
    >


</TextView>
<Button
    android:id="@+id/btnApply"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="32sp"
    android:textColor="@color/white"
    android:backgroundTint="@color/my_background_color"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="100dp"
    android:text="@string/apply_for_loan">

</Button>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/my_background_color"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/view_app_status">

    </Button>

    <Button
        android:id="@+id/btndel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/my_background_color"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="Reject loan Application">

    </Button>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/my_background_color"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="Update loan Application">

    </Button>
</LinearLayout>